Code Refactoring and import rule added